[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/sans-serif.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/the-fattening.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="rctBackground" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="btnNewGame" type="Button" parent="Buttons"]
margin_left = 68.0
margin_top = 347.0
margin_right = 303.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCustomize" type="Button" parent="Buttons"]
margin_left = 71.0
margin_top = 405.0
margin_right = 306.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 1 )
text = "Customize"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnControls" type="Button" parent="Buttons"]
margin_left = 67.0
margin_top = 465.0
margin_right = 302.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 1 )
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnExit" type="Button" parent="Buttons"]
margin_left = 72.0
margin_top = 526.0
margin_right = 307.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 1 )
text = "Exit (esc)"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="CanvasLayer" parent="."]

[node name="lblGameName" type="Label" parent="Labels"]
anchor_right = 0.935
margin_left = 27.0
margin_top = 33.0
margin_right = -614.44
margin_bottom = 343.0
custom_fonts/font = SubResource( 2 )
text = "A
Night
At
Baby Bunny's"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="CanvasLayer" parent="."]

[node name="txeImage" type="TextureRect" parent="Images"]
anchor_left = 0.445313
anchor_top = 0.0383333
anchor_right = 0.844727
anchor_bottom = 0.953333
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Buttons/btnNewGame" to="." method="_on_btnNewGame_pressed"]
[connection signal="pressed" from="Buttons/btnCustomize" to="." method="_on_btnCustomize_pressed"]
[connection signal="pressed" from="Buttons/btnControls" to="." method="_on_btnControls_pressed"]
[connection signal="pressed" from="Buttons/btnExit" to="." method="_on_btnExit_pressed"]
